--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   <!-- [--------- For Bootstrap ---------] -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  <!-- [---------  Day.js library ---------] -->
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- [--------- Own Script ---------] -->
   <script src="./assets/js/script.js"></script>
 </body>
