--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
         code is implemented.
         -->
 
+    <div id="hour-1" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">1AM</div>
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn col-1 btn-danger col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-8" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
     <!-- Example of a past time block. The "past" class adds a gray background color. -->
     <!-- <div id="hour-9" class="row time-block past"> -->
     <div id="hour-9" class="row time-block">
@@ -68,8 +87,64 @@
       </button>
     </div>
 
+    <div id="hour-12" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-13" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-14" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-15" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-16" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
     <div id="hour-17" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-18" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <!-- <div id="hour-22" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">10PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
@@ -91,7 +166,7 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
-  </main>
+  </main> -->
 
   <!-- {============================= Footer =============================} -->
   <footer class="text-center mt-4 border-5 border-top border-dark">
