--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         code is implemented.
         -->
 
-    <div id="hour-1" class="row time-block">
-      <div class="col-2 col-md-1 hour text-center py-3">1AM</div>
+    <div id="hour-7" class="row time-block">
+      <div class="col-2 col-md-1 hour text-center py-3">7AM</div>
       <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
-      <button class="btn col-1 btn-danger col-md-1" aria-label="delete">
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
         <i class="fas fa-trash-alt" aria-hidden="true"></i>
       </button>
       <button class="btn saveBtn col-1 col-md-1" aria-label="save">
@@ -51,8 +51,11 @@
 
     <div id="hour-8" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -61,8 +64,11 @@
     <!-- <div id="hour-9" class="row time-block past"> -->
     <div id="hour-9" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -71,8 +77,11 @@
     <!-- <div id="hour-10" class="row time-block present"> -->
     <div id="hour-10" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -81,64 +90,88 @@
     <!-- <div id="hour-11" class="row time-block future"> -->
     <div id="hour-11" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-12" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-13" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-14" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-15" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-16" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-17" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
     <div id="hour-18" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-9 description" rows="3"> </textarea>
+      <button class="btn btn-danger col-1 col-md-1" aria-label="delete">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+      </button>
+      <button class="btn saveBtn col-1 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -168,25 +201,25 @@
     </div>
   </main> -->
 
-  <!-- {============================= Footer =============================} -->
-  <footer class="text-center mt-4 border-5 border-top border-dark">
-    <p>
-      <i class="far fa-calendar-minus"></i>
-      Made By Andrew</a>
-      <i class="far fa-calendar-plus"></i>
-    </p>
-  </footer>
+    <!-- {============================= Footer =============================} -->
+    <footer class="text-center mt-4 border-5 border-top border-dark">
+      <p>
+        <i class="far fa-calendar-minus"></i>
+        Made By Andrew</a>
+        <i class="far fa-calendar-plus"></i>
+      </p>
+    </footer>
 
-  <!-- {============================= JavaScript =============================} -->
-  <!-- [--------- Jquery ---------] -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <!-- [--------- For Bootstrap ---------] -->
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-  <!-- [---------  Day.js library ---------] -->
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <!-- [--------- Own Script ---------] -->
-  <script src="./assets/js/script.js"></script>
+    <!-- {============================= JavaScript =============================} -->
+    <!-- [--------- Jquery ---------] -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- [--------- For Bootstrap ---------] -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <!-- [---------  Day.js library ---------] -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <!-- [--------- Own Script ---------] -->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
